--- a/frontend/index.html
+++ b/frontend/index.html
@@ -336,8 +336,8 @@
         </div>
         
         <div class="quick-actions">
-            <button class="quick-action" onclick="sendQuickMessage('Check availability for this weekend')">Check Weekend</button>
-            <button class="quick-action" onclick="sendQuickMessage('Make a reservation for tomorrow at 7pm')">New Booking</button>
+            <button class="quick-action" onclick="sendQuickMessage('Check availability for this weekend')">Check Weekend Availability</button>
+            <button class="quick-action" onclick="sendQuickMessage('Create a new booking')">New Booking</button>
             <button class="quick-action" onclick="sendQuickMessage('Check my booking')">My Booking</button>
             <button class="quick-action" onclick="sendQuickMessage('Cancel my reservation')">Cancel</button>
         </div>
